tests/positive/BuiltinsMultiOpenImport/Nat.mjuvix
module Nat;

builtin natural
inductive Nat {
  zero : Nat;
  suc : Nat → Nat;
};

end;
