tests/negative/LacksFunctionClause.mjuvix
module LacksFunctionClause;

  id : Type → Type → Type;
end;
